# datadog-mcp-server

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
datadog_mcp_server/: __init__.py  __main__.py
datadog_mcp_server/mcp_server/: __init__.py  _client.py  _state.py  configure_datadog.py  create_context.py  create_event.py  delete_context.py  get_context.py  health_check.py  list_contexts.py  list_dashboards.py  list_monitors.py  query_model.py  search_logs.py  update_context.py
tests/: test_tools.py
