[project]
name = "datadog-mcp-server"
version = "1.0.0"
description = "MCP server interacts with the official DataDog API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datadog-api-client>=2.36.0",
    "mcp[cli]>=1.9.4",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.3",
    "python-dotenv>=1.1.0",
]

[project.scripts]
datadog_mcp_server = "datadog_mcp_server.__main__:cli"

[tool.uv]
package = true

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flake8-bugbear>=24.12.12",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
]
